# Al_algorithms

./: Convolutions.ipynb  README.md
cnn_basics/: Convolutions.ipynb
gpr_cpp_toy/: CMakeLists.txt  README.md  install_dependencies.sh  main.cpp
